src/main/kotlin/br/com/car/k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-service-app
spec:
  selector:
    matchLabels:
      app: car-service-app
  template:
    metadata:
      labels:
        app: car-service-app
    spec:
      containers:
        - name: car-service
          image: joao0212/car-service:v2
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---
