src/main/kotlin/br/com/car/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-service-app
spec:
  selector:
    app: car-service-app
  ports:
    - port: 8080
  type: NodePort
