src/main/kotlin/br/com/car/k8s/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-service-app-ingress
spec:
  tls:
    - hosts:
      - "car-service.com"
  rules:
    - host: "car-service.com"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: car-service-app
                port:
                  number: 8080
